[ENG-17000] Fix CustomerApp padding on small screens (#1815)

--- a/src/components/AppLayout/AppLayout.scss
+++ b/src/components/AppLayout/AppLayout.scss
@@ -16,6 +16,10 @@ $content-max-width: 700px;
     align-items: flex-start;
   }
 
+  @include tablet() {
+    padding-top: $v-24;
+  }
+
   @include phone() {
     padding-left: 0;
     padding-right: 0;
